(feat) updated login and signup to use modal structure

--- a/client/app/auth/needlogin.tpl.html
+++ b/client/app/auth/needlogin.tpl.html
@@ -1,4 +1,4 @@
 <div>
-  <a class="loginButton" ng-click="loginPage()">login</a>
-  <a class="signupButton" ng-click="signupPage()">sign up</a>
+  <a class="loginButton" ng-click="toggleLogin()">login</a>
+  <a class="signupButton" ng-click="toggleSignup()">sign up</a>
 </div>
