--- a/client/app/auth/signupPage.html
+++ b/client/app/auth/signupPage.html
@@ -1,10 +1,16 @@
-<div class="signupPage">
-Signup Page
-  <form ng-submit="postSignupData(userInfo)">
-    Email: <input type="email" ng-model="userInfo.email" required><br>
-    Password: <input type="password" ng-model="userInfo.password" required><br>
-    First Name: <input type="text" ng-model="userInfo.first" required><br>
-    Last Name: <input type="text" ng-model="userInfo.last" required>
-    <input style="visibility:hidden" type="submit">
-  </form>
+<div class="ng-modal" ng-show="show">
+  <div class="ng-modal-overlay" ng-click="hideModal()"></div>
+  <div class="ng-modal-dialog" ng-style="dialogStyle">
+    <div class="ng-modal-close" ng-click="hideModal()">X</div>
+    <div class="ng-modal-dialog-content">
+      <h3>Signup</h3>
+      <form ng-submit="action({userInfo: userInfo}) hideModal()">
+        <div>Email:</br><input type="email" ng-model="userInfo.email" required></div>
+        <div>Password:</br><input type="password" ng-model="userInfo.password" required></div>
+        <div>First Name:</br><input type="text" ng-model="userInfo.first" required></div>
+        <div>Last Name:</br><input type="text" ng-model="userInfo.last" required></div>
+        <input style="visibility:hidden" type="submit">
+      </form>
+    </div>
+  </div>
 </div>
