--- a/client/index.html
+++ b/client/index.html
@@ -7,7 +7,6 @@
   <link href='http://fonts.googleapis.com/css?family=Montserrat+Alternates' rel='stylesheet' type='text/css'>
   <link rel="stylesheet" type="text/css" href="styles/style.css" />
   <link rel="stylesheet" type="text/css" href="styles/icecream-grid.css" />
-  <link src="bower_components/ngDialog/css/NgDialog.min.css" />
 </head>
 <body ng-app='nite-out'>
   <h1 ui-sref="main">NiteOut</h1>
@@ -16,6 +15,8 @@
   <div class="user-status" ng-controller="AuthController">
     <needlogin ng-if="!loginStatus[0]"></needlogin>
     <loggedin ng-if="loginStatus[0]"></loggedin>
+    <modal-dialog show="loginShown" action="getLoginData(userInfo)" template-url="app/auth/loginPage.html"></modal-dialog>
+    <modal-dialog show="signupShown" action="postSignupData(userInfo)" template-url="app/auth/signupPage.html"></modal-dialog>
   </div>
 
   <div class="i-g">
@@ -26,10 +27,6 @@
     <div class="i-2"></div>
   </div>
 
-  <!-- <span> to be added to main page later
-    <niteOutCart></niteOutCart>
-  </span> -->
-
   <!-- distribution requirements -->
   <!-- <script src="dist/build.js"></script> -->
 
@@ -38,7 +35,6 @@
   <script src="bower_components/angular-ui-router/release/angular-ui-router.js"></script>
   <script src="https://maps.googleapis.com/maps/api/js?libraries=places&sensor=true"></script>
   <script src="bower_components/lodash/dist/lodash.min.js"></script>
-  <script src="bower_components/ngDialog/js/ngDialog.min.js"></script>
   <script src="bower_components/angular-google-maps/dist/angular-google-maps.min.js"></script>
 
   <script src="app/auth/auth.js"></script>
@@ -52,11 +48,10 @@
   <script src="app/restaurants/services.js"></script>
   <script src="app/movies/movies.js"></script>
   <script src="app/movies/services.js"></script>
+  <script src="app/movies/showtimes.js"></script>
   <script src="app/cart/cart.js"></script>
   <script src="app/main/main.js"></script>
   <script src="app/main/services.js"></script>
   <script src="app/app.js"></script>
-
-  <script src="app/movies/showtimes.js"></script>
 </body>
 </html>
