(feat) added edit cart view

--- a/client/app/auth/loggedin.tpl.html
+++ b/client/app/auth/loggedin.tpl.html
@@ -1,2 +1,2 @@
-<div><button ng-click="signout()">Log Out</button> WELCOME USER</div>
+<div><a class="home-button" ng-click="signout()">Log Out</a> WELCOME {{user}}</div>
 
