--- a/client/app/cart/mycart.html
+++ b/client/app/cart/mycart.html
@@ -1,10 +1,7 @@
 <div class="cart">
-  <div>Cart</div>
+  <h3>Cart</h3>
   <div ng-repeat="item in cart">
     <div>{{item.event}}<span> #: {{item.numTickets}}</span></div>
     <span>{{item.time}}</span>
   </div>
-
-  <button ui-sref="main.mycart">Edit Cart</button>
-  <button ui-sref="main.checkout">Checkout</button>
 </div>
