--- a/client/app/checkout/checkout.html
+++ b/client/app/checkout/checkout.html
@@ -1,5 +1,5 @@
 <div class="checkout">
-
+  <h3>Checkout</h3>
   <div ng-repeat="items in cart">
     <div>{{items.event}}<span> #: {{items.numTickets}}</span></div>
     <span>{{items.time}}</span>
