--- a/client/app/auth/needlogin.tpl.html
+++ b/client/app/auth/needlogin.tpl.html
@@ -1,4 +1,4 @@
 <div>
-  <a class="home-button" ng-click="toggleLogin()">login</a>
-  <a class="home-button" ng-click="toggleSignup()">sign up</a>
+  <a class="home-button" ng-click="toggleLogin()">LOGIN</a>
+  <a class="home-button" ng-click="toggleSignup()">SIGN UP</a>
 </div>
