(refactor) updated styling for cart, restaurants maps, and services

--- a/client/app/cart/cart.html
+++ b/client/app/cart/cart.html
@@ -5,6 +5,6 @@
     <span>{{item.time}}</span>
   </div>
 
-  <button ui-sref="main.mycart">Edit Cart</button>
-  <button ui-sref="main.checkout">Checkout</button>
+  <a class="home-button" ui-sref="main.mycart">Edit Cart</a>
+  <a class="home-button" ui-sref="main.checkout">Checkout</a>
 </div>
