--- a/client/app/restaurants/restaurants.html
+++ b/client/app/restaurants/restaurants.html
@@ -1,7 +1,7 @@
 <h3>Restaurants</h3>
   <center>
     <google-map id="google-map" center="map.center" zoom="map.zoom" control="map.control" options="map.options" events="map.events">
-      <markers models="restaurants" coords="'coords'" fit="'true'"></markers>
+      <markers models="restaurants" coords="'coords'" icon="'icon'" fit="'true'"></markers>
     </google-map>
   </center>
 <div class="event" ng-repeat="restaurant in restaurants">
