(feat) updated styling for events

--- a/client/app/events/events.html
+++ b/client/app/events/events.html
@@ -11,8 +11,6 @@
     <span class="time">{{event.date}}</span></br>
     <div>{{event.venue}}</div>
     <div>{{event.address}}</div>
-    <span>
-      <button class="bookIt" ng-click="bookIt(event.title, event.data, 2)">Book Tickets</button>
-    </span>
+    <a class="home-button" ng-click="bookIt(event.title, event.data, 2)">Book Tickets</a>
   </div>
 </div>
