--- a/client/app/checkout/shopping.html
+++ b/client/app/checkout/shopping.html
@@ -2,6 +2,6 @@
 
   <h2>Feel free to continue shopping</h2>
   <h4>Just pick another event!</h4>
-  <a ui-sref="main.checkout">checkout</a>
+  <a class="home-button" ui-sref="main.checkout">Checkout</a>
 
 </div>
