(feat) added user name to login area

--- a/client/app/auth/loggedin.tpl.html
+++ b/client/app/auth/loggedin.tpl.html
@@ -1,2 +1,5 @@
-<div><a class="home-button" ng-click="signout()">Log Out</a> WELCOME {{user}}</div>
+<div>
+  Welcome, {{user}}
+  <a class="home-button" ng-click="signout()">Log Out</a> 
+</div>
 
