(feat) updated continue shopping view to be more user friendly

--- a/client/app/checkout/shopping.html
+++ b/client/app/checkout/shopping.html
@@ -1,7 +1,12 @@
 <div class="shopping">
 
-  <h2>Feel free to continue shopping</h2>
-  <h4>Just pick another event!</h4>
+  <h3>Pick another event to continue shopping!</h3>
+  <div>
+    <a class="home-button" ui-sref="main.restaurant">restaurant</a>
+    <a class="home-button" ui-sref="main.concert">concert</a>
+    <a class="home-button" ui-sref="main.movie">movie</a>
+  </div>
+  Or you can checkout!
   <a class="home-button" ui-sref="main.checkout">Checkout</a>
 
 </div>
