(feat) updated state links on shopping cart page

--- a/client/app/checkout/shopping.html
+++ b/client/app/checkout/shopping.html
@@ -1,12 +1,14 @@
-<div class="shopping">
-
+<div>
   <h3>Pick another event to continue shopping!</h3>
+  <center>
   <div>
-    <a class="home-button" ui-sref="main.restaurant">restaurant</a>
-    <a class="home-button" ui-sref="main.concert">concert</a>
-    <a class="home-button" ui-sref="main.movie">movie</a>
+    <a class="home-button" ui-sref="main.restaurants">Restaurant</a>
+    <a class="home-button" ui-sref="main.events">Events</a>
+    <a class="home-button" ui-sref="main.movies">Movies</a>
+  </div></br>
+  <div>
+    Or you can checkout!</br></br>
+    <a class="home-button" ui-sref="main.checkout">Checkout</a>
   </div>
-  Or you can checkout!
-  <a class="home-button" ui-sref="main.checkout">Checkout</a>
-
+  </center>
 </div>
