--- a/client/app/cart/cart.html
+++ b/client/app/cart/cart.html
@@ -1,7 +1,7 @@
 <div class="cart">
   <h3>Cart</h3>
   <div ng-repeat="item in cart" class="cart-item">
-    <div>{{item.event}}</div>
+    <div class="title">{{item.event}}</div>
     <div># of Tickets: {{item.numTickets}}</div>
     <div>{{item.time}}</div>
     <br/>
