(bug) fixed typo that broke bower.json. Also fixed cart display to make more legible.

--- a/client/app/cart/mycart.html
+++ b/client/app/cart/mycart.html
@@ -1,7 +1,9 @@
 <div class="cart">
   <h3>Cart</h3>
   <div ng-repeat="item in cart">
-    <div>{{item.event}}<span> #: {{item.numTickets}}</span></div>
+    <div> - {{item.event}}<span> #: {{item.numTickets}}</span></div>
     <span>{{item.time}}</span>
+    <div></div>
+    <br/>
   </div>
 </div>
