--- a/client/app/checkout/checkout.html
+++ b/client/app/checkout/checkout.html
@@ -1,7 +1,9 @@
 <div class="checkout">
   <h3>Checkout</h3>
   <div ng-repeat="items in cart">
-    <div>{{items.event}}<span> #: {{items.numTickets}}</span></div>
+    <div> - {{items.event}}<span> #: {{items.numTickets}}</span></div>
     <span>{{items.time}}</span>
+    <div></div>
+    <br/>
   </div>
 </div>
