(doc) updated documentation and file structure to be inline with style guide for auth services

--- a/client/index.html
+++ b/client/index.html
@@ -37,7 +37,7 @@
   <script src="bower_components/angular-google-maps/dist/angular-google-maps.min.js"></script>
 
   <script src="app/auth/auth.js"></script>
-  <script src="app/auth/authServices.js"></script>
+  <script src="app/auth/services.js"></script>
   <script src="app/checkout/checkout.js"></script>
   <script src="app/map/map.js"></script>
   <script src="app/map/services.js"></script>
