(bug) Map marker 1 on movies page no longer migrates to map center

--- a/client/app/movies/movies.html
+++ b/client/app/movies/movies.html
@@ -1,6 +1,6 @@
 <h3>Theaters</h3>
 <center>
-  <google-map id="google-map" center="theaters[0].coords" zoom="map.zoom" control="map.control" draggable="true" options="map.options" events="map.events">
+  <google-map id="google-map" center="map.center" zoom="map.zoom" control="map.control" draggable="true" options="map.options" events="map.events">
     <markers models="theaters" coords="'coords'" icon="'icon'" fit="true" control="theaters.control" options="'options'" events="theaters.events"></markers>
   </google-map>
 </center>
