(feat) added concerts to shop shopping page

--- a/client/app/checkout/shopping.html
+++ b/client/app/checkout/shopping.html
@@ -3,7 +3,7 @@
   <center>
   <div>
     <a class="home-button" ui-sref="main.restaurants">Restaurant</a>
-    <a class="home-button" ui-sref="main.events">Events</a>
+    <a class="home-button" ng-click="eventGo('music')">Concerts</a>
     <a class="home-button" ui-sref="main.movies">Movies</a>
   </div></br>
   <div>
