--- a/client/app/checkout/shopping.html
+++ b/client/app/checkout/shopping.html
@@ -4,6 +4,7 @@
   <div>
     <a class="home-button" ui-sref="main.restaurants">Restaurant</a>
     <a class="home-button" ng-click="eventGo(music)">Concerts</a>
+    <a class="home-button" ng-click="eventGo(sports)">Sports</a>
     <a class="home-button" ui-sref="main.movies">Movies</a>
   </div></br>
   <div>
