--- a/client/index.html
+++ b/client/index.html
@@ -20,7 +20,7 @@
 
   <div class="i-g">
     <div class="i-2" ng-controller="cartController">
-      <cart></cart>
+      <cart style="position: fixed"></cart>
     </div>
     <div class="i-8" ui-view></div>
     <div class="i-2"></div>
