--- a/client/app/auth/signupPage.html
+++ b/client/app/auth/signupPage.html
@@ -1,4 +1,4 @@
-<div class="ng-modal" ng-show="show">
+<div class="ng-modal" ng-if="show">
   <div class="ng-modal-overlay" ng-click="hideModal()"></div>
   <div class="ng-modal-dialog" ng-style="dialogStyle">
     <div class="ng-modal-close" ng-click="hideModal()">X</div>
