--- a/client/app/checkout/checkout.html
+++ b/client/app/checkout/checkout.html
@@ -1,9 +1,11 @@
-<div class="checkout">
+<div>
   <h3>Checkout</h3>
-  <div ng-repeat="items in cart">
-    <div> - {{items.event}}<span> #: {{items.numTickets}}</span></div>
-    <span>{{items.time}}</span>
-    <div></div>
-    <br/>
-  </div>
+  <center>
+    <div ng-repeat="items in cart" class="checkout">
+      <div> {{items.event}}<span> # of Tickets: {{items.numTickets}}</span></div>
+      <span>{{items.time}}</span>
+      <div></div>
+      <br/>
+    </div>
+  </center>
 </div>
