--- a/client/index.html
+++ b/client/index.html
@@ -38,6 +38,7 @@
   <script src="app/auth/auth.js"></script>
   <script src="app/auth/services.js"></script>
   <script src="app/checkout/checkout.js"></script>
+  <script src="app/checkout/marketTestingPage.js"></script>
   <script src="app/map/map.js"></script>
   <script src="app/map/services.js"></script>
   <script src="app/events/events.js"></script>
