--- a/client/app/checkout/marketTestingPage.html
+++ b/client/app/checkout/marketTestingPage.html
@@ -1,5 +1,5 @@
-<div class="marketing">
-  We appreciate your interest in Nite-Out!
-
+<h2 class="marketing">
+  <br>
+  We appreciate your interest in Nite-Out! <br> <br>
   We will keep you updated on our beta!
-</div>
+</h2>
